# LogoCompiler

./: .depend  .gitignore  CMakeLists.txt  Executor.cpp  Executor.h  FileWriter.cpp  FileWriter.h  Function.cpp  Function.h  Interpreter.cpp  Interpreter.h  Lexer.l  Op.cpp  Op.h  OpsQueue.cpp  OpsQueue.h  Pixel.h  README.md  StackFrame.h  Variable.cpp  Variable.h  VariableWrapper.cpp  VariableWrapper.h  a.out  doc.md  input.logo  lex.yy.c  lex.yy.cpp  logoCompiler  main.cpp  makefile  symbols.cpp  symbols.h  utility.h
final/: README.md
final/input/: test10.logo  test12.logo  test14.logo  test2.logo  test4.logo  test9.logo
final/src/: CMakeLists.txt  Executor.cpp  Function.h  Interpreter.cpp  Lexer.l  Op.cpp  OpsQueue.cpp  Variable.h  utility.h  wrongtest.logo
src/: .depend  Executor.cpp  Executor.h  FileWriter.cpp  FileWriter.h  Function.cpp  Interpreter.h  Op.cpp  Op.h  Variable.cpp  Variable.h  lex.yy.cpp  makefile  symbols.cpp  utility.h
testcases/basic/: readme.md  testcase_2.logo  testcase_3.logo
testcases/errorcases/: readme.md  testcase_3.logo  testcase_6.logo  testcase_7.logo  testcase_8.logo
testcases/extended/: readme.md  testcase_10.logo  testcase_11.logo  testcase_12.logo  testcase_4.logo
testcases/extended/logoGen/: aoligay.logo  bird.logo  logoGenerator.py
tests/: test0.logo  test1.logo  test10.logo  test11.logo  test15.logo  test16.logo  test17.logo  test2.logo  test3.logo  test4.logo  test6.logo  test7.logo  test8.logo
